DigIt CHANGE LOG
======================

2025/06/23 Moved Counter var from Form to Unit;
           Removed rSourceXXX vars from Form and use Sources property;
           First write of DigIt_Session (does not compile)

        20 Fixed Build Duplex Wizard does not works;
           Moved TDigIt_Sources to DigIt_Sources Unit;
           Created Settings and Sources main Vars;
           Deleted Bridge SettingsImpl and SourcesImpl properties;

        19 Moved ConfirmSaveOnClose test to right place;
           Added Settings.Session write access to solve incorrect XML Save Object (see merge req to lazarus 494);
           Completed and tested under Linux GetUserName;
           Use GetUserName in PDF Export;
           UI Fixes SourceMenu duplicate and Export ActiveControl;
           Updated languages;

        18 Completed Profiles method Add from SourceInfo;
           Hide or Show Separator whether or not there are Profiles;
           Changed Settings var name and use of Sub Objects Read/Write (see merge req to lazarus 494);
           Wia/Twain Source don't return SourceName in Summary;

        17 Added Summary in Twain/WIA Sources (first version);
           Added Add Current Source in Profiles Menù;

        13 Added Load of a Profile from Menù;
           Added PROF_Item const;
           Added SourceName to Caption (really may be Scanner Name);

        06 Separated the profile menu into a new ToolButton

        05 Changed Profile List Item Name;
           Added Profiles Reorder;

        04 Replaced IDigIt_Settings.Path_XXX functions with a single function Path;
           Added Profiles Edit Form (to finish);

2025/05/29 Added XMLRoot_Path and XML_File param to Load/Save Source;
           Load Last Used Source at Startup;
           Save Last Used Source when User Select;
           Changed const File_Options to File_Config;
           Removed selectedProfile var;

        28 Renamed Unit DigIt_Counters;