@@ -13,7 +13,9 @@ unit DigIt_Sources;
 interface
 
 uses
-  Classes, SysUtils, Laz2_XMLCfg, Digit_Bridge_Intf, MM_OpenArrayList;
+  Classes, SysUtils, Laz2_XMLCfg,
+  MM_OpenArrayList,
+  DigIt_Types, Digit_Bridge_Intf;
 
 type
   { TDigIt_Sources }
@@ -44,6 +46,10 @@ type
     function Save(SourceIndex: Integer; aXML: TRttiXMLConfig; XMLRoot_Path: String; SaveParams: Boolean): Boolean; overload;
     function Save(aXML: TRttiXMLConfig; XMLRoot_Path: String; SaveParams: Boolean): Boolean; overload;
     //function LoadSelectedParams(XMLFileName, XMLPath: String): Boolean;
+
+    function Take(takeAction: DigIt_Source_TakeAction;
+                  var AFiles: TSourceFileArray; AStartIndex: Integer): DWord; overload;
+    function Take(takeAction: DigIt_Source_TakeAction; var AFileName: String): Boolean; overload;
 
     property Selected: PSourceInfo read rSelected;
     property SelectedIndex: Integer read rSelectedIndex;
@@ -211,6 +217,95 @@ begin
 
   except
     Result:= False;
+  end;
+end;
+
+function TDigIt_Sources.Take(takeAction: DigIt_Source_TakeAction;
+                             var AFiles: TSourceFileArray; AStartIndex: Integer): DWord;
+var
+   curData: Pointer;
+   curDataType: TDigItDataType;
+   oldLength, i: Integer;
+   curImageFile: PChar;
+
+begin
+  Result:= 0;
+  if (rSelected <> nil) and (rSelected^.Inst <> nil) then
+  begin
+    curData:= nil;
+
+    Result:= rSelected^.Inst.Take(takeActTake, curDataType, curData);
+    if (curData <> nil) then
+    begin
+      //Add files to end of Array AFiles
+      oldLength:= Length(AFiles);
+      Case curDataType of
+        diDataType_FileName: begin
+          if (AStartIndex < 0) or (AStartIndex > oldLength) then AStartIndex:= oldLength;
+
+          //Add more space, if needed, to end of Array
+          if (AStartIndex+1 > oldLength) then SetLength(AFiles, AStartIndex+1);
+
+          AFiles[AStartIndex].fName:= PChar(curData);
+          StrDispose(PChar(curData));
+          Result:= 1;
+        end;
+        diDataType_FileNameArray: begin
+          Result:= IDigIt_ArrayR_PChars(curData).GetCount;
+          if (Result > 0) then
+          begin
+            if (AStartIndex < 0) or (AStartIndex > oldLength) then AStartIndex:= oldLength;
+
+            //Add more space, if needed, to end of Array
+            if (AStartIndex+Result > oldLength) then SetLength(AFiles, AStartIndex+Result);
+
+            for i:=0 to Result-1 do
+              if IDigIt_ArrayR_PChars(curData).Get(i, curImageFile) then
+              begin
+                AFiles[AStartIndex+i].fName:= curImageFile;
+                StrDispose(curImageFile);
+              end;
+          end;
+        end;
+        else Result:= 0;
+      end;
+   end;
+  end;
+end;
+
+function TDigIt_Sources.Take(takeAction: DigIt_Source_TakeAction; var AFileName: String): Boolean;
+var
+   curData: Pointer;
+   curDataType: TDigItDataType;
+   res: Integer;
+   curImageFile: PChar;
+
+begin
+  Result:= False;
+  if (rSelected <> nil) and (rSelected^.Inst <> nil) then
+  begin
+    curData:= nil;
+
+    res:= rSelected^.Inst.Take(takeAction, curDataType, curData);
+    if (res > 0) and (curData <> nil) then
+    begin
+      Case curDataType of
+        diDataType_FileName: begin
+          AFileName:= PChar(curData);
+          StrDispose(PChar(curData));
+          Result:= True;
+        end;
+        diDataType_FileNameArray: begin
+          if IDigIt_ArrayR_PChars(curData).Get(0, curImageFile)
+          then begin
+                 AFileName:= curImageFile;
+                 StrDispose(curImageFile);
+               end
+          else AFileName:= '';
+          Result:= True;
+        end;
+      end;
+    end;
   end;
 end;
 
