@@ -7,6 +7,8 @@ Bugs:
     Anche in un A4 le misure sono errate (non viene messo il dpi nel pdf? [120dpi di default?])
   
 Main:
+  Aggiungere checkbox "Ultima Pagina Bianca" in Wizard BuildDuplex
+
   riprendi sessione : barra di captured alla fine
   
   Take/Preview con Countdown
